envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 8000 }
static_resources:
  listeners:
    - name: grpc_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: server
                    domains: ["*"]
                    routes:
                      - match: { path: "/" }
                        direct_response:
                          status: 200
                          body:
                            inline_string: "OK!"
                      - match: { prefix: "/" }
                        route:
                          cluster: server
                    cors:
                      allow_origin:
                        - "*"
                      allow_methods: GET, PUT, DELETE, POST, OPTIONS, PATCH
                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization,x-api-key
                      max_age: "1728000"
                      expose_headers: grpc-status,grpc-message
              access_log:
                - name: envoy.file_access_log
                  config:
                    path: /dev/stdout
              http_filters:
                - name: envoy.grpc_web
                - name: envoy.cors
                - name: envoy.router
  clusters:
    - name: server
      connect_timeout: 10s
      type: STRICT_DNS
      http2_protocol_options: {}
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: server
            port_value: 9090
